Allow triagers to download backups

--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -12,17 +12,22 @@
         <ul>
             <li><a routerLink="/progress">{{statistics.requests.currentBurns | number}} {{statistics.requests.currentBurns
                     == 1 ? 'is' : 'are'}} currently being burned</a></li>
-            <li><a routerLink="/requests" [queryParams]="{status:'featured'}">{{statistics.requests.proposedBurns | number}}
+            <li><a routerLink="/requests"
+                    [queryParams]="{status:'featured'}">{{statistics.requests.proposedBurns | number}}
                     {{statistics.requests.proposedBurns == 1 ? 'is' : 'are'}} featured</a></li>
-            <li><a routerLink="/requests" [queryParams]="{trackingStatusId:2}">{{statistics.requests.withTrackedTags | number}}
+            <li><a routerLink="/requests"
+                    [queryParams]="{trackingStatusId:2}">{{statistics.requests.withTrackedTags | number}}
                     have a tracked tag</a></li>
             <li><a routerLink="/requests"
                     [queryParams]="{trackingStatusId:1}">{{statistics.requests.requireTrackingApproval | number}}
                     require tag tracking approval</a></li>
-            <li><a routerLink="/requests" [queryParams]="{status:'status-declined'}">{{statistics.requests.declined | number}}
+            <li><a routerLink="/requests"
+                    [queryParams]="{status:'status-declined'}">{{statistics.requests.declined | number}}
                     were declined</a></li>
-            <li><a routerLink="/requests" [queryParams]="{status:'status-completed'}">{{statistics.requests.completed | number}}
-                    were completed</a> (<a routerLink="/tracked-burns">{{statistics.requests.trackedCompleted | number}} tracked</a>)</li>
+            <li><a routerLink="/requests"
+                    [queryParams]="{status:'status-completed'}">{{statistics.requests.completed | number}}
+                    were completed</a> (<a routerLink="/tracked-burns">{{statistics.requests.trackedCompleted | number}}
+                    tracked</a>)</li>
             <li><a routerLink="/requests"
                     [queryParams]="{status:'status-completed', hasQuestions: 'yes'}">{{statistics.requests.completedWithQuestionsLeft | number}}
                     are completed but still have tracked tags with questions</a></li>
@@ -39,10 +44,13 @@
         <ul>
             <li>{{statistics.tags.noQuestions | number}} have no questions attached to them</li>
             <li>{{statistics.tags.synonymised | number}} were synonomised</li>
-            <li>{{statistics.tags.hasQuestionsAndAttachedToCompletedRequest | number}} have questions despite being found on
+            <li>{{statistics.tags.hasQuestionsAndAttachedToCompletedRequest | number}} have questions despite being
+                found on
                 a
                 status-completed request</li>
-            <li><span class="mr-1" *ngIf="statistics.tags.zombieCount > 0">⚠️</span><a routerLink="/zombies">{{statistics.tags.zombieCount | number}} currently alive tags have re-appeared after removal</a></li>
+            <li><span class="mr-1" *ngIf="statistics.tags.zombieCount > 0">⚠️</span><a
+                    routerLink="/zombies">{{statistics.tags.zombieCount | number}} currently alive tags have re-appeared
+                    after removal</a></li>
         </ul>
     </ul>
     <ul>
@@ -50,18 +58,20 @@
             <a routerLink="users">{{statistics.users.totalUsers | number}} total users</a>
         </li>
     </ul>
-    <ng-container *ngIf="isAdmin">
+    <ng-container *ngIf="isAdmin || isTriager">
         <hr />
         <h2>Administration</h2>
         <ul>
-            <li><a routerLink="/logs" [queryParams]="{level:'Info'}">Logs</a></li>
-            <li><a routerLink="/tag-tracking-status-audits">Tag Tracking Status Audits</a></li>
-            <li><a href="/Hangfire">Hangfire</a></li>
-            <li><a routerLink="/manual-question-processing">Manual Question Processing</a></li>
-            <li><a routerLink="/unknown-deletion-resolution">Unknown deletion resolution
-                    ({{statistics.admin.unknownDeletions | number}})</a></li>
             <li><a href="javascript:void(0)" (click)="downloadBackup()">Download backup</a></li>
-            <li><a href="javascript:void(0)" (click)="shutdown()">Shutdown</a></li>
+            <ng-container *ngIf="isAdmin">
+                <li><a routerLink="/logs" [queryParams]="{level:'Info'}">Logs</a></li>
+                <li><a routerLink="/tag-tracking-status-audits">Tag Tracking Status Audits</a></li>
+                <li><a href="/Hangfire">Hangfire</a></li>
+                <li><a routerLink="/manual-question-processing">Manual Question Processing</a></li>
+                <li><a routerLink="/unknown-deletion-resolution">Unknown deletion resolution
+                        ({{statistics.admin.unknownDeletions | number}})</a></li>
+                <li><a href="javascript:void(0)" (click)="shutdown()">Shutdown</a></li>
+            </ng-container>
         </ul>
     </ng-container>
 </div>
